[package]
name = "zbx_hexporter"
version = "0.1.0"
authors = ["Sebastian YEPES F <syepes@gmail.com>"]

[lib]
name = "zbx_hexporter"
crate-type = ["dylib"]

[dependencies]
clippy = "*"
log = "*"
log4rs = { version = "*", optional = false, features = ["toml"] }
lazy_static ="*"
zbx = {path = 'C:\Users\syepesfernandez\Documents\00-Data\03-Personal\00-Devs\Zabbix\rust-zbx.syepes', version="*"}
csv = "*"
influent = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

